--- a/src/main.scss
+++ b/src/main.scss
@@ -24,21 +24,31 @@ $yellow: #FCFAA3;
 $l-fsize: 64px;
 $m-fsize: 32px;
 $s-fsize: 16px;
+$xs-fsize: 12px;
+
+// spacing
+$top-spacing: 128px;
 
 html,
 body {
-  height: 100%;
+  height: auto;
   width: 100%;
   background-color: $charcoil;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-    // background-image: url("/assets/images/shape_test.png");
+}
+
+@media (min-width: 900px) {
+  body {
+    height: 100%;
   }
-  * {
-    box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Oswald', sans-serif;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -67,7 +77,13 @@ h1 {
 
 p,span {
   color: white;
-  font-size: 16px;
+  font-size: $s-fsize;
+}
+
+@media (max-width: 900px) {
+  p,span {
+    font-size: $xs-fsize;
+  }
 }
 
 .flex-row {
@@ -86,8 +102,14 @@ p,span {
 
 .helper-container {
   min-height: 100vh;
-  padding-top: 128px;
+  padding-top: 64px;
   padding-bottom: 64px;
+}
+
+@media (max-width: 900px) {
+  .helper-container {
+    margin: 0 20px;
+  }
 }
 
 /**************
@@ -100,6 +122,13 @@ p,span {
   width: $board-width;
   max-width: 1060px;
   margin: 42px auto;
+}
+
+@media  (max-width: 900px) {
+  .ctrl-board {
+    width: 100%;
+    margin: $m-fsize 0;
+  }
 }
 .domain {
   display: flex;
@@ -120,10 +149,11 @@ p,span {
     margin-top: 0;
     text-align: center;
   }
+  & + .domain {
+    margin-left: $m-fsize;
+  }
 }
-.domain + .domain {
-  margin-left: 2vw;
-}
+
 .controller {
   border-radius: 6px;
   height: 60px;
@@ -147,6 +177,41 @@ p,span {
   }
 }
 
+
+@media (max-width: 400px) {
+  .domain {
+    min-height: 130px;
+    width: 100%;
+    margin-left: 0;
+    flex-direction: row;
+    h1{
+      font-size: $m-fsize;
+      margin-right: $s-fsize;
+    }
+    & + .domain {
+      margin-left: 0;
+    }
+    .controller {
+      min-width:76px;
+      width: 76px;
+      height: auto;
+      flex-direction: column;
+      margin-left: $s-fsize;
+      .ctrl-button:first-child {
+        order: 3;
+        margin-bottom: 10px;
+      }
+      .ctrl-button:last-child {
+        order: 1;
+        margin-top: 10px;
+      }
+      .ctrl-display {
+        order: 2;
+      }
+    }
+  }
+}
+
 .runner-container {
   span.runner-reset {
     cursor: pointer;
@@ -165,21 +230,23 @@ p,span {
   }
 }
 
-
-
 /**************
    display
 ***************/
+
 .bar{
-  top: -6vh;
-  position: absolute;
+  top: 0;
+  position: fixed;
   width: 100vw;
-  height: 6vh;
+  height: $m-fsize;
   .progression{
     height: 100%;
     width: 100%;
     background-color: $yellow;
     transition: ease-in ease-out 1s;
+    h1{
+      margin: 0;
+    }
   }
 }
 
